RESOLVED FIXED187585
[JSC] Generator and AsyncGeneratorMethod's prototype is incorrect
https://bugs.webkit.org/show_bug.cgi?id=187585
Summary [JSC] Generator and AsyncGeneratorMethod's prototype is incorrect
Yusuke Suzuki
Reported 2018-07-12 02:52:53 PDT
[JSC] AsyncGeneratorMethod's prototype is incorrect
Attachments
Patch (16.96 KB, patch)
2018-07-12 03:00 PDT, Yusuke Suzuki
darin: review+
Yusuke Suzuki
Comment 1 2018-07-12 03:00:36 PDT
Yusuke Suzuki
Comment 2 2018-07-16 11:34:37 PDT
Ping?
Yusuke Suzuki
Comment 3 2018-07-16 11:49:27 PDT
Radar WebKit Bug Importer
Comment 4 2018-07-16 11:50:23 PDT
Note You need to log in before you can comment on or make changes to this bug.